# Cooked-Roasted-Life

./: .gitignore  Procfile  README.md  index.html  pyproject.toml  render.yaml  requirements.txt  run.py
app/: __init__.py  config.py
app/models/: __init__.py  database.py  user_data.py
app/routes/: __init__.py  api_routes.py  auth_routes.py  main_routes.py
app/services/: __init__.py  anime.py  gemini.py  spotify.py  steam.py  valorant.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  index.html  roast.html  share.html
app/templates/partials/: nav.html
app/utils/: decorators.py  formatter.py
docs/: config.js  index.html  public.html  view.html
docs/assets/: main.js  style.css
